remove summary from chunk